profile: fixed avatar height overflow issue.

--- a/app/assets/stylesheets/user/_profile.scss
+++ b/app/assets/stylesheets/user/_profile.scss
@@ -9,8 +9,8 @@
     margin-right: 5%;
 
     img {
-      width: 100%;
-      height: auto;
+      max-width: 150px;
+      max-height: 150px;
     }
   }
 
